<resources>
    <string name="app_name">Playground Yandex School</string>
    <string name="my_tasks">Мои дела</string>
    <string name="completed">Выполнено — %d</string>
    <string name="mark_completed">Пометить выполненным</string>
    <string name="mark_not_completed">Пометить невыполненным</string>
    <string name="show_completed">Показать завершённые</string>
    <string name="hide_completed">Скрыть завершённые</string>
    <string name="network_status">Состояние сети</string>
    <string name="more_info">Больше информации</string>
    <string name="add_new_task">Добавить новую задачу</string>
    <string name="close">Закрыть</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="what_to_do">Что надо сделать…</string>
    <string name="priority">Важность</string>
    <string name="deadline">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="no_priority">Без приоритета</string>
    <string name="high_priority">Высокий приоритет</string>
    <string name="low_priority">Низкий приоритет</string>
    <string name="priority_no">Нет</string>
    <string name="priority_low">Низкая</string>
    <string name="priority_high">!! Высокая</string>
    <string name="empty_task_message">Что надо сделать…</string>
    <string name="go_back">Назад</string>
    <string name="default_theme">По умолчанию</string>
    <string name="light_theme">Светлая</string>
    <string name="dark_theme">Тёмная</string>
    <string name="system_theme">Из настроек системы</string>
    <string name="theme">Тема</string>
    <string name="settings">Настройки</string>
    <string name="select_time">Выбор времени</string>
    <string name="ready">Готово</string>
    <string name="cancel">Отмена</string>
    <string name="empty"> </string>
    <string name="do_until">Сделать до</string>
    <string name="network_error_update_todo">Ошибка обновления. Подключитесь к сети</string>
    <string name="network_error_add_todo">Ошибка добавления. Подключитесь к сети</string>
    <string name="offline_message">Подключитесь к интернету, чтобы загрузить данные</string>
    <string name="authorization_message">Авторизируйтесь, чтобы начать пользоваться приложением. Воспользуйтесь Яндекс ID.</string>
    <string name="registration_button">registration button</string>
    <string name="state">state</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Выйти</string>
    <string name="divkit">Перейти к DivKit</string>

</resources>