<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?back_primary"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/close"
        android:src="@drawable/close"
        android:padding="17dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?android:attr/selectableItemBackground"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/settings"
        android:gravity="center"
        style="@style/TodoBody"
        />


    <TextView
        android:id="@+id/titleTheme"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:text="@string/theme"
        style="@style/TitleSmall"
        android:layout_alignParentEnd="true"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        />


    <RelativeLayout
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleTheme"
        android:background="?android:attr/selectableItemBackground">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            >
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/light_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTint="?color_blue"
                android:textAlignment="textStart"
                android:text="@string/light_theme"
                style="@style/TodoBody"
                android:paddingHorizontal="20dp"

                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/dark_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTint="?color_blue"
                android:textAlignment="textStart"
                android:text="@string/dark_theme"
                style="@style/TodoBody"
                android:paddingHorizontal="20dp"

                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/system_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTint="?color_blue"
                android:textAlignment="textStart"
                android:text="@string/system_theme"
                style="@style/TodoBody"
                android:paddingHorizontal="20dp"

                />
        </RadioGroup>

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?label_tertiary"
        app:layout_constraintTop_toBottomOf="@+id/theme"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>