<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_shape"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingTop="12dp"
    android:paddingEnd="16dp"
    android:paddingBottom="12dp">


    <ImageView
        android:id="@+id/ivCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/mark_completed"
        android:focusable="true"
        app:srcCompat="@drawable/checkbox_unchecked_normal" />

    <ImageView
        android:id="@+id/ivPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="3dp"
        android:contentDescription="@string/no_priority" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTodo"
            style="@style/TodoBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:ellipsize="end"
            android:maxLines="3" />


        <TextView
            android:id="@+id/tvTodoDeadline"
            style="@style/Subhead"
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="?label_tertiary"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/more_info"
        app:srcCompat="@drawable/info_icon" />


</LinearLayout>