<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?back_primary"
    android:orientation="vertical"
    tools:context=".fragments.EditTodoFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?back_primary"
        app:liftOnScroll="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/close"
                android:src="@drawable/close" />


            <TextView
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/save"
                android:textColor="?color_blue" />

        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="14dp"
            android:paddingVertical="12dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                app:cardBackgroundColor="?back_secondary"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/etTodo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/empty_task_message"
                    android:importantForAutofill="no"
                    android:inputType="text|textMultiLine"
                    android:minLines="4"
                    android:textSize="16sp" />


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:text="@string/priority"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/no"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?label_tertiary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="16dp"
                    android:background="?label_tertiary" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDeadlineName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingVertical="26.5dp"
                        android:text="@string/deadline"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|bottom"
                        android:text="@string/empty"
                        android:textColor="?color_blue"
                        android:textSize="14sp"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        app:thumbTint="@drawable/selector_thumb_color"
                        app:trackTint="@drawable/selector_track_color" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="24dp"
                    android:background="?label_tertiary" />


                <LinearLayout
                    android:id="@+id/deleteLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8.5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/delete"
                        android:paddingStart="0dp"
                        android:paddingEnd="12dp"
                        android:src="@drawable/delete" />

                    <TextView
                        android:id="@+id/tvDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:textColor="?label_disable" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>