<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?back_primary"
    tools:context=".ui.MainScreenFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?back_primary"
            app:collapsedTitleGravity="center_vertical"
            app:collapsedTitleTextAppearance="@style/CollapsedTitle"
            app:expandedTitleMarginBottom="50dp"
            app:expandedTitleMarginStart="58dp"
            app:expandedTitleTextAppearance="@style/ExpandedTitle"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/my_tasks">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="148dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="@integer/material_motion_duration_medium_1">

                <TextView
                    android:id="@+id/tvCompletedCounter"
                    style="@style/DoneBody"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="60dp"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:text="@string/completed"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
            </FrameLayout>

            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?back_primary"
                android:popupTheme="@style/ThemeOverlay.AppCompat"
                app:layout_collapseMode="pin" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom">

                <ImageView
                    android:id="@+id/ivNetworkStatusRefresh"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="72dp"
                    android:contentDescription="@string/network_status"
                    android:paddingHorizontal="9dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/refresh_offline"
                    app:layout_constraintBottom_toBottomOf="@+id/tvCompletedCounter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvCompletedCounter" />

                <ImageView
                    android:id="@+id/ivVisibility"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@string/hide_completed"
                    android:paddingHorizontal="9dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/visibility"
                    app:layout_constraintBottom_toBottomOf="@+id/tvCompletedCounter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvCompletedCounter" />

            </FrameLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTodoList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/recycler_shape"
        android:elevation="1dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/add_new_task"
        android:focusable="true"
        android:src="@drawable/add"
        app:backgroundTint="?color_blue"
        app:shapeAppearanceOverlay="@style/FabShapeCircle" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>